--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get_it: ^8.0.3
   http: ^1.2.2
   carousel_slider: ^5.0.0
+  cached_network_image: ^3.4.1
   
 
 dev_dependencies:
